# muz

./: LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  rescript.json  vite.config.js
src/: App.res  AppStyles.res  Button.res  Command.res  Route.res  State.res  Tauri.res  Track.res  dummy.test.res
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  events.rs  lib.rs  main.rs
src-tauri/src/player/: library.rs  library.tests.rs  mod.rs  playback.rs  playback.tests.rs  playback_driver.rs  queue.rs  queue.tests.rs  sound.rs  spectrum.rs  track.rs  track.tests.rs
src-tauri/src/player/driver/: awedio.rs  factory.rs  mod.rs  rodio.rs
src-tauri/src/services/: library_service.rs  mod.rs  playback_service.rs  playback_service.tests.rs
src/bindings/: Motion.res  WebGL.res
src/components/DragDrop/: DndProvider.res
src/components/LibrarySettings/: LibrarySettings.res  LibrarySettingsStyles.res
src/components/LibraryView/: Albums.res  Artists.res  LibraryView.res  LibraryViewStyles.res
src/components/Menu/: Menu.res  MenuStyles.res
src/components/MillerColumnsView/: MillerColumn.res  MillerColumnTracks.res  (+2 more)
src/constants/: Shaders.res
src/contexts/: PlayerContext.res
src/design/: Color.res  Sizes.res  Spacing.res  Theme.res
src/domain/: Command.res  State.res  Track.res
src/hooks/: UseProgressData.res  UseSpectrumData.res
src/pages/: LibraryPage.res  MusicPlayerPage.res  SettingsPage.res  VisualizerPage.res
src/services/: LibraryService.res  PlaybackService.res  TrackService.res
(+10 files in other folders)
