[package]
name = "muz"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["rodio-driver"]
awedio-driver = ["awedio"]
rodio-driver = ["rodio"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
awedio = { version = "0.5.0", optional = true }
rodio = { version = "0.20.1", optional = true, default-features = false, features = ["symphonia-all"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros"] }
anyhow = "1.0.98"
symphonia = { version = "0.5.4", features = ["all"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
spectrum-analyzer = "1.5.0"

